--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -58,6 +58,22 @@ jobs:
               working-directory: packages/core
               if: ${{ steps.release.outputs['packages/core--release_created'] }}
 
+            - name: Tweet Release Announcement
+              run: npx @humanwhocodes/tweet "@humanfs/core v${{ steps.release.outputs['packages/core--major'] }}.${{ steps.release.outputs['packages/core--minor'] }}.${{ steps.release.outputs['packages/core--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/core--tag_name'] }}"
+              if: ${{ steps.release.outputs['packages/core--release_created'] }}
+              env:
+                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+            
+            - name: Toot Release Announcement
+              run: npx @humanwhocodes/toot "@humanfs/core v${{ steps.release.outputs['packages/core--major'] }}.${{ steps.release.outputs['packages/core--minor'] }}.${{ steps.release.outputs['packages/core--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/core--tag_name'] }}"'
+              if: ${{ steps.release.outputs['packages/core--release_created'] }}
+              env:
+                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+
             #-----------------------------------------------------------------------------
             # @humanfs/test
             #-----------------------------------------------------------------------------
@@ -88,23 +104,21 @@ jobs:
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
-            #-----------------------------------------------------------------------------
-            # @humanfs/deno
-            #-----------------------------------------------------------------------------
-
-            - name: Publish @humanfs/deno package to npm
-              run: npm publish -w packages/deno
-              if: ${{ steps.release.outputs['packages/deno--release_created'] }}
+            - name: Tweet Release Announcement
+              run: npx @humanwhocodes/tweet "@humanfs/node v${{ steps.release.outputs['packages/node--major'] }}.${{ steps.release.outputs['packages/node--minor'] }}.${{ steps.release.outputs['packages/node--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/node--tag_name'] }}"
+              if: ${{ steps.release.outputs['packages/node--release_created'] }}
               env:
-                  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-
-            - name: Publish @humanfs/deno package to JSR
-              run: |
-                npm run build
-                deno task install-deps
-                npx jsr publish --allow-dirty
-              working-directory: packages/deno
-              if: ${{ steps.release.outputs['packages/deno--release_created'] }}
+                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+            
+            - name: Toot Release Announcement
+              run: npx @humanwhocodes/toot "@humanfs/node v${{ steps.release.outputs['packages/node--major'] }}.${{ steps.release.outputs['packages/node--minor'] }}.${{ steps.release.outputs['packages/node--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/node--tag_name'] }}"'
+              if: ${{ steps.release.outputs['packages/node--release_created'] }}
+              env:
+                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
 
             #-----------------------------------------------------------------------------
             # @humanfs/memory
@@ -123,6 +137,22 @@ jobs:
               working-directory: packages/memory
               if: ${{ steps.release.outputs['packages/memory--release_created'] }}
 
+            - name: Tweet Release Announcement
+              run: npx @humanwhocodes/tweet "@humanfs/memory v${{ steps.release.outputs['packages/memory--major'] }}.${{ steps.release.outputs['packages/memory--minor'] }}.${{ steps.release.outputs['packages/memory--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/memory--tag_name'] }}"
+              if: ${{ steps.release.outputs['packages/memory--release_created'] }}
+              env:
+                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+            
+            - name: Toot Release Announcement
+              run: npx @humanwhocodes/toot "@humanfs/memory v${{ steps.release.outputs['packages/memory--major'] }}.${{ steps.release.outputs['packages/memory--minor'] }}.${{ steps.release.outputs['packages/memory--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/memory--tag_name'] }}"'
+              if: ${{ steps.release.outputs['packages/memory--release_created'] }}
+              env:
+                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+
             #-----------------------------------------------------------------------------
             # @humanfs/web
             #-----------------------------------------------------------------------------
@@ -132,3 +162,53 @@ jobs:
               if: ${{ steps.release.outputs['packages/web--release_created'] }}
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+            - name: Tweet Release Announcement
+              run: npx @humanwhocodes/tweet "@humanfs/web v${{ steps.release.outputs['packages/web--major'] }}.${{ steps.release.outputs['packages/web--minor'] }}.${{ steps.release.outputs['packages/web--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/web--tag_name'] }}"
+              if: ${{ steps.release.outputs['packages/web--release_created'] }}
+              env:
+                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+            
+            - name: Toot Release Announcement
+              run: npx @humanwhocodes/toot "@humanfs/web v${{ steps.release.outputs['packages/web--major'] }}.${{ steps.release.outputs['packages/web--minor'] }}.${{ steps.release.outputs['packages/web--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/web--tag_name'] }}"'
+              if: ${{ steps.release.outputs['packages/web--release_created'] }}
+              env:
+                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+
+            #-----------------------------------------------------------------------------
+            # @humanfs/deno
+            #-----------------------------------------------------------------------------
+
+            - name: Publish @humanfs/deno package to npm
+              run: npm publish -w packages/deno
+              if: ${{ steps.release.outputs['packages/deno--release_created'] }}
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+            - name: Publish @humanfs/deno package to JSR
+              run: |
+                npm run build
+                deno task install-deps
+                npx jsr publish --allow-dirty
+              working-directory: packages/deno
+              if: ${{ steps.release.outputs['packages/deno--release_created'] }}
+
+            - name: Tweet Release Announcement
+              run: npx @humanwhocodes/tweet "@humanfs/deno v${{ steps.release.outputs['packages/deno--major'] }}.${{ steps.release.outputs['packages/deno--minor'] }}.${{ steps.release.outputs['packages/deno--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/deno--tag_name'] }}"
+              if: ${{ steps.release.outputs['packages/deno--release_created'] }}
+              env:
+                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+            
+            - name: Toot Release Announcement
+              run: npx @humanwhocodes/toot "@humanfs/deno v${{ steps.release.outputs['packages/deno--major'] }}.${{ steps.release.outputs['packages/deno--minor'] }}.${{ steps.release.outputs['packages/deno--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/v${{ steps.release.outputs['packages/deno--tag_name'] }}"'
+              if: ${{ steps.release.outputs['packages/deno--release_created'] }}
+              env:
+                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
