--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -3,6 +3,7 @@
   "version": "0.19.0",
   "description": "The in-memory bindings for the hfs library.",
   "type": "module",
+  "main": "dist/memory-hfs.js",
   "types": "dist/memory-hfs.d.ts",
   "exports": {
     "import": {
