chore: Only tweet individual packages

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -106,7 +106,7 @@ jobs:
 
             - name: Tweet Release Announcement
               run: npx @humanwhocodes/tweet "humanfs/node v${{ steps.release.outputs['packages/node--major'] }}.${{ steps.release.outputs['packages/node--minor'] }}.${{ steps.release.outputs['packages/node--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/node--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/node--release_created'] }}
+              if: ${{ steps.release.outputs['packages/node--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
                 TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
@@ -115,7 +115,7 @@ jobs:
             
             - name: Toot Release Announcement
               run: npx @humanwhocodes/toot "humanfs/node v${{ steps.release.outputs['packages/node--major'] }}.${{ steps.release.outputs['packages/node--minor'] }}.${{ steps.release.outputs['packages/node--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/node--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/node--release_created'] }}
+              if: ${{ steps.release.outputs['packages/node--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
                 MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
@@ -139,7 +139,7 @@ jobs:
 
             - name: Tweet Release Announcement
               run: npx @humanwhocodes/tweet "humanfs/memory v${{ steps.release.outputs['packages/memory--major'] }}.${{ steps.release.outputs['packages/memory--minor'] }}.${{ steps.release.outputs['packages/memory--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/memory--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/memory--release_created'] }}
+              if: ${{ steps.release.outputs['packages/memory--release_created']  && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
                 TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
@@ -148,7 +148,7 @@ jobs:
             
             - name: Toot Release Announcement
               run: npx @humanwhocodes/toot "humanfs/memory v${{ steps.release.outputs['packages/memory--major'] }}.${{ steps.release.outputs['packages/memory--minor'] }}.${{ steps.release.outputs['packages/memory--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/memory--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/memory--release_created'] }}
+              if: ${{ steps.release.outputs['packages/memory--release_created']  && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
                 MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
@@ -165,7 +165,7 @@ jobs:
 
             - name: Tweet Release Announcement
               run: npx @humanwhocodes/tweet "humanfs/web v${{ steps.release.outputs['packages/web--major'] }}.${{ steps.release.outputs['packages/web--minor'] }}.${{ steps.release.outputs['packages/web--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/web--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/web--release_created'] }}
+              if: ${{ steps.release.outputs['packages/web--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
                 TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
@@ -174,7 +174,7 @@ jobs:
             
             - name: Toot Release Announcement
               run: npx @humanwhocodes/toot "humanfs/web v${{ steps.release.outputs['packages/web--major'] }}.${{ steps.release.outputs['packages/web--minor'] }}.${{ steps.release.outputs['packages/web--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/web--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/web--release_created'] }}
+              if: ${{ steps.release.outputs['packages/web--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
                 MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
@@ -198,7 +198,7 @@ jobs:
 
             - name: Tweet Release Announcement
               run: npx @humanwhocodes/tweet "humanfs/box v${{ steps.release.outputs['packages/box--major'] }}.${{ steps.release.outputs['packages/box--minor'] }}.${{ steps.release.outputs['packages/box--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/box--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/box--release_created'] }}
+              if: ${{ steps.release.outputs['packages/box--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
                 TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
@@ -207,7 +207,7 @@ jobs:
             
             - name: Toot Release Announcement
               run: npx @humanwhocodes/toot "humanfs/box v${{ steps.release.outputs['packages/box--major'] }}.${{ steps.release.outputs['packages/box--minor'] }}.${{ steps.release.outputs['packages/box--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/box--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/box--release_created'] }}
+              if: ${{ steps.release.outputs['packages/box--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
                 MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
@@ -232,7 +232,7 @@ jobs:
 
             - name: Tweet Release Announcement
               run: npx @humanwhocodes/tweet "humanfs/deno v${{ steps.release.outputs['packages/deno--major'] }}.${{ steps.release.outputs['packages/deno--minor'] }}.${{ steps.release.outputs['packages/deno--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/deno--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/deno--release_created'] }}
+              if: ${{ steps.release.outputs['packages/deno--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
                 TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
@@ -241,7 +241,7 @@ jobs:
             
             - name: Toot Release Announcement
               run: npx @humanwhocodes/toot "humanfs/deno v${{ steps.release.outputs['packages/deno--major'] }}.${{ steps.release.outputs['packages/deno--minor'] }}.${{ steps.release.outputs['packages/deno--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/deno--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/deno--release_created'] }}
+              if: ${{ steps.release.outputs['packages/deno--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
               env:
                 MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
                 MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
