fix: Add directory to package.json

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -23,7 +23,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/humanwhocodes/humanfs.git"
+    "url": "git+https://github.com/humanwhocodes/humanfs.git",
+    "directory": "packages/node"
   },
   "publishConfig": {
     "access": "public"
